# nex-editor

./: .gitignore  Cargo.toml  LICENSE  README.md  run.sh
.codex/skills/nex-editor-founder/: SKILL.md
apps/web-playground/: README.md  index.html  package-lock.json  package.json  playwright.config.ts
apps/web-playground/src/: bridge.ts  debug.ts  input.ts  main.ts  metrics.ts  renderer.ts  shell.ts  status.ts  style.css  types.ts
apps/web-playground/tests/: editor.spec.ts  hooks.ts
benches/: benchmark.rs
crates/app/: Cargo.toml
crates/commands/: Cargo.toml
crates/commands/src/: base.rs  lib.rs
crates/document/: Cargo.toml
crates/editor/: Cargo.toml
crates/model/: Cargo.toml
crates/runtime/: Cargo.toml
crates/state/: Cargo.toml
crates/transform/: Cargo.toml
crates/wasm/: Cargo.toml
docs/: about.md  architecture-constraints-v1.md  current-flow-v1.md  index.md  internal-model-v1.md  protocol-v1.md  render-protocol-v1.md  state.md
docs/.vitepress/: config.mts
src/: lib.rs
src/color/: mod.rs
src/editor/: editor_node.rs  editor_selection.rs  editor_state.rs  mod.rs
src/layout/: mod.rs  page.rs  paragraph_layout.rs
src/nodes/: mod.rs  paragraph_node.rs  root_node.rs  text_node.rs
src/page/: page.rs
src/render/: mod.rs  skia.rs
src/selection/: selection.rs
src/utils/: command.rs  utils.rs
tests/: layout_layout_frame.rs  layout_test.rs  paragraph_nodes_test.rs  render_skia_render.rs  sample.rs  skia.rs  skia_test.rs  state_append_paragraph_node.rs  state_append_text_node.rs  state_test.rs  text_node_test.rs
(+35 files in other folders)
