[workspace]
resolver = "2"
members = [
    "crates/model",
    "crates/transform",
    "crates/state",
    "crates/commands",
    "crates/runtime",
    "crates/wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
wasm-bindgen = "0.2"
